--- a/Example/Broadening.ipynb
+++ b/Example/Broadening.ipynb
@@ -13,7 +13,7 @@
     "# basedir = \"/Users/cas003/Downloads/Beamtime/DataFiles\"\n",
     "\n",
     "## Setup necessary inputs\n",
-    "from BroadSword import *\n",
+    "from BroadSword.BroadSword import *\n",
     "from bokeh.io import output_notebook\n",
     "output_notebook(hide_banner=True)"
    ]
