--- a/Example/Broadening.ipynb
+++ b/Example/Broadening.ipynb
@@ -29,32 +29,28 @@
     "broad = Broaden()\n",
     "\n",
     "# Load the experimental and calculations\n",
-    "broad.loadExp(basedir,XES=\"N_test_XES.txt\",XANES=\"N_test_XAS.txt\",GS_fermi=0.44996547,headerlines=[2,2])\n",
-    "broad.loadCalc(basedir,XES=\"N1_emis.txspec\",XAS=\"N1_abs.txspec\",GS_bindingEnergy=27.176237,XANES=\"N1_half.txspec\",ES_fermi=0.45062079,sites=1,edge=\"L2\")\n",
+    "broad.loadExp(basedir,XES=\"N_test_XES.txt\",XANES=\"XAS_Fe_Nitrogen.csv\",GS_fermi=0.44996547,headerlines=[2,2])\n",
+    "broad.loadCalc(basedir,XES=\"N1_emis.txspec\",XAS=\"N1_abs.txspec\",GS_bindingEnergy=27.176237,XANES=\"N1_half.txspec\",ES_fermi=0.45062079,sites=1,edge=\"L2\",headerlines=[0,0,0]) \n",
     "broad.loadCalc(basedir,XES=\"N2_emis.txspec\",XAS=\"N2_abs.txspec\",GS_bindingEnergy=27.177975,XANES=\"N2_half.txspec\",ES_fermi=0.45091878)\n",
     "broad.loadCalc(basedir,XES=\"N3_emis.txspec\",XAS=\"N3_abs.txspec\",GS_bindingEnergy=27.122234,XANES=\"N3_half.txspec\",ES_fermi=0.45090808)\n",
     "broad.loadCalc(basedir,XES=\"N4_emis.txspec\",XAS=\"N4_abs.txspec\",GS_bindingEnergy=27.177070,XANES=\"N4_half.txspec\",ES_fermi=0.45088602)\n",
-    "\n",
     "# broad.loadCalc(basedir,XES=\"N1_emis.txspec\",XAS=\"N1_abs.txspec\",GS_bindingEnergy=27.177070) # Minimum required inputs to broaden a spectra.\n",
     "\n",
     "# Initialize the broadening parameters\n",
     "broad.initResolution(corelifetime=0.15,specResolution=1200,monoResolution=5000,disorder=0.5,XESscaling=0.5,XASscaling=0.5)\n",
-    "# Optionally you can scale specific bands in XEN. Use printBands() to determine where the bands are located.\n",
-    "# Then add the new argument XESbandScaling into initResolution()\n",
-    "# broad.printBands()\n",
-    "# XESbandScaling=[[0.1,0.2,0.2,0.4],[0.2,0.2,0.4,0.2],[0.3,0.2,0.1,0.5],[0.3,0.5,0.4,0.2]])\n",
-    "\n",
     "# Shift the spectra until the calculation aligns with the experimental\n",
     "broad.Shift(XESshift=19.2,XASshift=20.2,separate=False)\n",
-    "# Optionally you can shift specific bands in XES.\n",
-    "# Add the new argument into Shift()\n",
-    "# XESbandshift=[[30,33,30,20],[15,19.2,19.2,19.2],[30,33,30,20],[15,19.2,19.2,19.2]])\n",
-    "\n",
     "# Broaden the spectra\n",
     "broad.broaden(separate=False)\n",
-    "\n",
     "# Export the broadened calculated spectra\n",
-    "# broad.export(filename=\"GeP2N4\",element=\"N\",individual=False)"
+    "# broad.export(filename=\"GeP2N4\",element=\"N\",individual=False)\n",
+    "\n",
+    "# Optionally you can scale and shift specific bands in XES. Use printBands() to determine where the bands are located.\n",
+    "# Then add the new argument XESbandScaling into initResolution() and XESbandshift int Shift()\n",
+    "#broad.printBands()\n",
+    "#broad.initResolution(corelifetime=0.15,specResolution=1200,monoResolution=5000,disorder=0.5,XESscaling=0.5,XASscaling=0.5,XESbandScaling=[[0.1,0.2,0.2,0.4],[0.2,0.2,0.4,0.2],[0.3,0.2,0.1,0.5],[0.3,0.5,0.4,0.2]])\n",
+    "#broad.Shift(XESshift=19.2,XASshift=20.2,separate=False,XESbandshift=[[30,33,30,20],[15,19.2,19.2,19.2],[30,33,30,20],[15,19.2,19.2,19.2]])\n",
+    "#broad.broaden(separate=False)"
    ]
   }
  ],
